Add login && Minor fixes
