# app/models/UserModel.py
@@ -7,3 +7,10 @@ class UserModel(BaseModel):
     username = db.Column(db.String(60), nullable=False)
     email = db.Column(db.String(60), unique=True, nullable=False, index=True)
     password = db.Column(db.String(128), nullable=False)
+
+    def __repr__(self):
+        return f'<User {self.username}>'
+    
+    def check_password(self, password): 
+        #sim é isso mesmo, "né segredo"
+        return self.password == password 
